--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
         <h1 class="header-title">Jungle Safari Souvenir Shop</h1>
         <nav>
             <ul class="nav-bar">
-                <li><a href="">Pokemon 1</a></li>
-                <li><a href="">Pokemon 2</a></li>
-                <li><a href="">Pokemon 3</a></li>
-                <li><a href="">Pokemon 4</a></li>
-                <li><a href="">Pokemon 5</a></li>
+                <li><a href="">1</a></li>
+                <li><a href="">2</a></li>
+                <li><a href="">3</a></li>
+                <li><a href="">4</a></li>
+                <li><a href="">5</a></li>
             </ul>
         </nav>
     </header>
