--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
         <h1 class="header-title">Jungle Safari Souvenir Shop</h1>
         <nav>
             <ul class="nav-bar">
-                <li><a href="">1</a></li>
-                <li><a href="">2</a></li>
-                <li><a href="">3</a></li>
-                <li><a href="">4</a></li>
-                <li><a href="">5</a></li>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./dashboard.html">Dashboard</a></li>
+                <li><a href="./add-item.html">Add Item</a></li>
+                <li><a href="./inventory.html">View Inventory</a></li>
+                <li><a href="./login.html">Login/Sign Up</a></li>
             </ul>
         </nav>
     </header>
