--- a/add-item.html
+++ b/add-item.html
@@ -11,6 +11,11 @@
       <h2>Add New Item</h2>
       <form id="addItemForm" action="/inventory.html">
         <input type="text" id="itemName" placeholder="Item Name" required />
+        <input
+          type="text"
+          id="itemDescription"
+          placeholder="Item Description"
+        />
         <input type="number" id="itemPrice" placeholder="Price" required />
         <input type="number" id="itemCost" placeholder="Cost" required />
         <input
