--- a/inventory.html
+++ b/inventory.html
@@ -12,6 +12,7 @@
       <thead>
         <tr>
           <th>Item Name</th>
+          <th>Description</th>
           <th>Price</th>
           <th>Cost</th>
           <th>Stock</th>
